tests/skip/duplicate-getters-2.stderr
error: encountered duplicate `#[skip(getters)]` attribute for field
 --> $DIR/duplicate-getters-2.rs:5:15
  |
5 |     #[skip] #[skip(getters)]
  |               ^^^^

error: duplicate `#[skip(getters)]` here
 --> $DIR/duplicate-getters-2.rs:5:7
  |
5 |     #[skip] #[skip(getters)]
  |       ^^^^
